# aa

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt  README.md  iu7-algan-cicd-student.mk
lab1/docs/: report.tex
lab1/docs/tex_parts/: analyse.tex  construction.tex  format.tex  intro.tex  lib.bib  lib.tex  research.tex  technological.tex
lab1/inc/: Algorithm.h  AlgorithmCreator.h  AlgorithmCreatorsBuilder.h  Benchmark.h  DamerauLevenshteinAlgorithm.h  Implementation.h  LevenshteinMemoisedAlgorithm.h  LevenshteinRecursiveAlgorithm.h  LevenshteinTableAlgorithm.h  Matrix.h  TemplateAlgorithmCreator.h
lab1/report/: report.tex  stud-unit-test-report-prev.json
lab1/report/tex_parts/: analyse.tex  conclusion.tex  construction.tex  format.tex  intro.tex  lib.bib  research.tex  technological.tex
lab1/src/: Algorithm.cpp  AlgorithmCreatorsBuilder.cpp  Benchmark.cpp  DamerauLevenshteinAlgorithm.cpp  LevenshteinMemoisedAlgorithm.cpp  LevenshteinRecursiveAlgorithm.cpp  LevenshteinTableAlgorithm.cpp  Matrix.cpp  levenshtein.py  main.cpp  main.py  test.py
lab2/: .gitignore  CMakeLists.txt  README.md  iu7-algan-cicd-student.mk
lab2/inc/: Algorithm.h  AlgorithmCreator.h  AlgorithmCreatorsBuilder.h  Implementation.h  Matrix.h  StandartAlgorithm.h  StandartOptimisedAlgorithm.h  TemplateAlgorithmCreator.h  VinogradAlgorithm.h  VinogradOptimisedAlgorithm.h
lab2/src/: Algorithm.cpp  AlgorithmCreatorsBuilder.cpp  Matrix.cpp  StandartAlgorithm.cpp  StandartOptimisedAlgorithm.cpp  VinogradAlgorithm.cpp  VinogradOptimisedAlgorithm.cpp  main.cpp
lab3/: .gitignore  (+3 more)
(+117 files in other folders)
